cluster/base/blog/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog
  annotations:
    ingress.kubernetes.io/browser-xss-filter: "true"
    ingress.kubernetes.io/content-type-nosniff: "true"
    ingress.kubernetes.io/custom-frame-options-value: SAMEORIGIN
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
    - host: lukasrotermund.invalid
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: blog
              port: 
                number: 80
  tls:
    - secretName: lukasrotermund-blog-tls
      hosts:
        - lukasrotermund.invalid
